// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "legend": Object {},
    "reportCapacity": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "tally": Object {},
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_TALLY_RHSM 1`] = `
Object {
  "result": Object {
    "legend": Object {},
    "reportCapacity": Object {},
    "tally": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "legend": Object {},
    "reportCapacity": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "tally": Object {},
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_TALLY_RHSM 1`] = `
Object {
  "result": Object {
    "legend": Object {},
    "reportCapacity": Object {},
    "tally": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "legend": Object {},
    "reportCapacity": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
    "tally": Object {},
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_TALLY_RHSM 1`] = `
Object {
  "result": Object {
    "legend": Object {},
    "reportCapacity": Object {},
    "tally": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle specific defined types: defined type SET_GRAPH_LEGEND 1`] = `
Object {
  "result": Object {
    "legend": Object {
      "lorem": true,
    },
    "reportCapacity": Object {},
    "tally": Object {},
  },
  "type": "SET_GRAPH_LEGEND",
}
`;
